--- a/dbms.html
+++ b/dbms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Helpdesk</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
-    <!-- CryptoJS for MD5 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <!-- MD5 Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
     <style>
         #img1 {
             width: 300px;
@@ -55,19 +55,19 @@
                         <form id="loginForm" onsubmit="submitForm(event)">
                             <div class="form-group mb-2">
                                 <label for="name">Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+                                <input type="text" class="form-control" id="name" placeholder="Enter your name">
                             </div>
                             <div class="form-group mb-2">
                                 <label for="email">Email address</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                                <input type="email" class="form-control" id="email" placeholder="Enter email">
                             </div>
                             <div class="form-group mb-2">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                                <input type="password" class="form-control" id="password" placeholder="Password" required autocomplete="current-password">
                             </div>
                             <div class="form-group mb-2">
                                 <label for="semester">Select Semester</label>
-                                <select class="form-control" id="semester" required>
+                                <select class="form-control" id="semester">
                                     <option value="1">Semester 1</option>
                                     <option value="2">Semester 2</option>
                                     <option value="3">Semester 3</option>
@@ -103,64 +103,65 @@
         }
     }
 
-   // Function to handle form submission
-function submitForm(event) {
-    event.preventDefault(); // Prevent default form submission
+    // Function to handle form submission
+    function submitForm(event) {
+        event.preventDefault(); // Prevent default form submission
 
-    const name = document.getElementById('name').value;
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-    const semester = document.getElementById('semester').value;
+        const name = document.getElementById('name').value;
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const semester = document.getElementById('semester').value;
 
-    // Assuming you have an API endpoint to handle login
-    const apiUrl = 'https://arambhsoftech.com/Helpdesk/new_user.php';
+        // Assuming you have an API endpoint to handle login
+        const apiUrl = 'https://arambhsoftech.com/Helpdesk/new_user.php';
 
-    // Convert password to MD5 (assuming you have a function for this)
-    const passwordMD5 = md5(password);
+        // Convert password to MD5 (assuming you have a function for this)
+        const passwordMD5 = md5(password);
 
-    // Example API request using fetch
-    fetch(apiUrl, {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-            name: name,
-            email: email,
-            password: passwordMD5,
-            semester: semester
+        // Example API request using fetch
+        fetch(apiUrl, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                name: name,
+                email: email,
+                password: passwordMD5,
+                semester: semester
+            })
         })
-    })
-    .then(response => {
-        if (response.status === 409) {
-            throw new Error('User already exists.');
-        }
-        return response.json();
-    })
-    .then(data => {
-        // Assuming the API responds with a success message
-        if (data.success) {
-            // Save name, email, and semester in cookies without expiration
-            setCookie('user_name', name, null); // No expiration
-            setCookie('user_email', email, null); // No expiration
-            setCookie('user_semester', semester, null); // No expiration
-            setCookie('user_active', 'true', null); // No expiration
+        .then(response => {
+            if (response.status === 409) {
+                throw new Error('User already exists.');
+            }
+            return response.json();
+        })
+        .then(data => {
+            // Assuming the API responds with a success message
+            if (data.success) {
+                // Save name, email, and semester in cookies without expiration
+                setCookie('user_name', name, null); // No expiration
+                setCookie('user_email', email, null); // No expiration
+                setCookie('user_semester', semester, null); // No expiration
+                setCookie('user_active', 'true', null); // No expiration
 
-            // Redirect to the respective semester page
-            window.location.href = `semister${semester}/index.html`;
-        } else {
-            alert('Login failed. Please check your credentials.');
-        }
-    })
-    .catch(error => {
-        console.error('Error:', error);
-        if (error.message === 'User already exists.') {
-            alert('This email is already registered. Please use a different email.');
-        } else {
-            alert('An error occurred while logging in. Please try again later.');
-        }
-    });
-}
+                // Redirect to the respective semester page
+                window.location.href = `semister${semester}/index.html`;
+            } else {
+                alert('Login failed. Please check your credentials.');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            if (error.message === 'User already exists.') {
+                alert('This email is already registered. Please use a different email.');
+            } else {
+                alert('An error occurred while logging in. Please try again later.');
+            }
+        });
+    }
+
     // Function to set a cookie
     function setCookie(name, value, days) {
         let expires = "";
@@ -169,22 +170,24 @@ function submitForm(event) {
             date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
             expires = "; expires=" + date.toUTCString();
         }
-        document.cookie = name + "=" + value + expires + "; path=/";
+        document.cookie = name + "=" + (value || "") + expires + "; path=/";
     }
 
     // Function to get a cookie value
     function getCookie(name) {
-        const cookieName = name + "=";
-        const cookies = document.cookie.split(';');
-        for (let i = 0; i < cookies.length; i++) {
-            let cookie = cookies[i].trim();
-            if (cookie.indexOf(cookieName) === 0) {
-                return cookie.substring(cookieName.length, cookie.length);
+        const nameEQ = name + "=";
+        const ca = document.cookie.split(';');
+        for (let i = 0; i < ca.length; i++) {
+            let c = ca[i];
+            while (c.charAt(0) === ' ') {
+                c = c.substring(1, c.length);
+            }
+            if (c.indexOf(nameEQ) === 0) {
+                return c.substring(nameEQ.length, c.length);
             }
         }
         return null;
     }
 </script>
-
 </body>
 </html>
