--- a/semister3/math.html
+++ b/semister3/math.html
@@ -155,6 +155,7 @@
   
   
     <div id="body">
+      <div class="heading_name">Basic Electricals</div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
