--- a/semister6/comp_intell.html
+++ b/semister6/comp_intell.html
@@ -154,7 +154,7 @@
   
   
     <div id="body">
-      <div class="heading_name">Basic Electricals</div>
+      <div class="heading_name">Computational Intelligence</div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
