--- a/semister3/daa.html
+++ b/semister3/daa.html
@@ -154,7 +154,7 @@
   
   
     <div id="body">
-      <div class="heading_name">Basic Electricals</div>
+      <div class="heading_name">Design and Analysis of Algorithms</div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
