--- a/semister3/math.html
+++ b/semister3/math.html
@@ -155,7 +155,7 @@
   
   
     <div id="body">
-      <div class="heading_name">Basic Electricals</div>
+      <div class="heading_name">Mathematics-3</div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
