--- a/semister7/ppd.html
+++ b/semister7/ppd.html
@@ -154,7 +154,7 @@
   
   
     <div id="body">
-      <div class="heading_name">Basic Electricals</div>
+      <div class="heading_name">PPD - VII</div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
