--- a/semister4/os.html
+++ b/semister4/os.html
@@ -154,7 +154,7 @@
   
   
     <div id="body">
-      <div class="heading_name">Operating System</div>
+      <div class="heading_name"></div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
