--- a/semister5/cloud.html
+++ b/semister5/cloud.html
@@ -39,19 +39,19 @@
       </button>
      <div id="leftSidebar" class="sidebar-left">
       <a href="javascript:void(0)" class="closebtn" onclick="closeLeftSidebar()">&times;</a>
-      <h2>Semister 1</h2>
-      <a href="../semister1/chemistry.html">Chemistry</a>
-      <a href="../semister1/math.html">Mathematics 1</a>
-      <a href="../semister1/bee.html">BEE</a>
-      <a href="../semister1/index.html">C programming</a>
-      <a href="../semister1/english.html" class="active">English</a>
-      <h2>Semister 2</h2>
-      <a href="../semister2/physics.html">Physics</a>
-      <a href="../semister2/math.html">Mathematics 2</a>
-      <a href="../semister2/electronics.html">Electronics</a>
-      <a href="../semister2/tech_com.html">Tech. communication</a>
-      <a href="../semister2/enviro.html">Env Science</a>
-      <a href="../semister2/index.html">Data Science</a>
+      <h2>Semister 5</h2>
+      <a href="../semister5/index.html">Software tech.</a>
+      <a href="../semister5/formal.html">Formal lang.</a>
+      <a href="../semister5/ai.html">AI</a>
+      <a href="../semister5/ml.html">ML</a>
+      <a href="../semister5/const.html">Indian Const.</a>
+      <a href="../semister5/comp_netw.html">Comp. Networks</a>
+      <a href="../semister5/big.html">Big Data</a>
+      <a href="../semister5/cloud.html" class="active">Cloud Computing</a>
+
+      <h2>Semister 6</h2>
+      <a href="#">Comming Soon....</a>
+     
   </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
         <img src="../assets/sys_img/down_arrow.png" alt="down" id="tongle_arrow">
@@ -79,7 +79,7 @@
   
   
     <div id="body">
-      <div class="heading_name">English</div>
+      <div class="heading_name">Cloud Computing</div>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
