--- a/login.html
+++ b/login.html
@@ -172,6 +172,8 @@ fetch(apiUrl, {
     document.getElementById('email').value="";
     document.getElementById('password').value="";
     document.getElementById('year').value="Year 1";
+    document.getElementById("btn_login").disabled = false;
+
     } else {
         er_msg("An error occurred while registering. Please try again later.");
     }
