--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
                             </div>
                             <div class="form-group mb-2">
                                 <label for="password">Password</label>
-                                <input type="text" class="form-control" id="password" placeholder="Password" required autocomplete="current-password">
+                                <input type="password" class="form-control" id="password" placeholder="Password" required autocomplete="current-password">
                             </div>
                             <div class="form-group mb-2">
                                 <label for="semester">Select Year</label>
