--- a/semister2/index.html
+++ b/semister2/index.html
@@ -54,8 +54,7 @@
       <a href="../semister2/index.html" class="active">Data Structure</a>
   </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
-        <img src="../assets/sys_img/down_arrow.png" alt="down" id="tongle_arrow">
-      </button>
+ <i class="fa fa-arrow-down" aria-hidden="true"></i>      </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
           <!-- 1st Year -->
