--- a/semister1/index.html
+++ b/semister1/index.html
@@ -53,6 +53,7 @@
       <a href="../semister2/enviro.html">Env Science</a>
       <a href="../semister2/index.html">Data Science</a>
   </div>
+  <div class="semister">Semister-1</div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
         <i class="fa fa-arrow-down" aria-hidden="true"></i>
       </button>
