--- a/semister4/python.html
+++ b/semister4/python.html
@@ -53,6 +53,8 @@
       <a href="../semister4/startup.html">Ent. & Startup</a>
       <a href="../semister4/python.html" class="active">Python</a>
   </div>
+  <div class="semister">Semister-4</div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
         <img src="../assets/sys_img/down_arrow.png" alt="down" id="tongle_arrow">
       </button>
