--- a/semister4/startup.html
+++ b/semister4/startup.html
@@ -53,6 +53,8 @@
       <a href="../semister4/startup.html" class="active">Ent. & Startup</a>
       <a href="../semister4/python.html">Python</a>
   </div>
+  <div class="semister">Semister-4</div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
  <i class="fa fa-arrow-down" aria-hidden="true"></i>      </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
