--- a/semister7/index.html
+++ b/semister7/index.html
@@ -46,6 +46,8 @@
       <a href="#">Comming Soon....</a>
      
   </div>
+  <div class="semister">Semister-5</div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
         <img src="../assets/sys_img/down_arrow.png" alt="down" id="tongle_arrow">
       </button>
