--- a/semister1/chemistry.html
+++ b/semister1/chemistry.html
@@ -52,7 +52,8 @@
       <a href="../semister2/tech_com.html">Tech. communication</a>
       <a href="../semister2/enviro.html">Env Science</a>
       <a href="../semister2/index.html">Data Science</a>
-  </div>
+  </div>  <div class="semister">Semister-1</div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
  <i class="fa fa-arrow-down" aria-hidden="true"></i>      </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
