--- a/semister2/index.html
+++ b/semister2/index.html
@@ -53,6 +53,8 @@
       <a href="../semister2/enviro.html">Env Science</a>
       <a href="../semister2/index.html" class="active">Data Structure</a>
   </div>
+  <div class="semister">Semister-2</div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
  <i class="fa fa-arrow-down" aria-hidden="true"></i>      </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
