--- a/semister5/big.html
+++ b/semister5/big.html
@@ -53,6 +53,8 @@
       <a href="#">Comming Soon....</a>
      
   </div>
+  <div class="semister">Semister-5</div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
  <i class="fa fa-arrow-down" aria-hidden="true"></i>      </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
