--- a/semister7/index.html
+++ b/semister7/index.html
@@ -49,7 +49,7 @@
   <div class="semister">Semister-5</div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" id="upper_menu_btn" data-bs-target="#collapsibleNavbar">
-        <img src="../assets/sys_img/down_arrow.png" alt="down" id="tongle_arrow">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar" >
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
