--- a/dbms.html
+++ b/dbms.html
@@ -90,7 +90,7 @@
                     console.error('Error:', error);
                 });     
     }else{
-        //window.location = "login.html";
+        window.location = "login.html";
 
     }
     function redirectToPage(userYear){
