--- a/semister5/index.html
+++ b/semister5/index.html
@@ -93,7 +93,7 @@
         <ans>Software is a set of instructions, data, or programs used to operate computers and execute specific tasks. It is the opposite of hardware which describes the physical aspects of a computer. Software is a generic term used to refer to applications, scripts, and programs that run on a device.</ans><br>
         
         <que>2. What are different types of software?</que><br>
-        <ans>Software can be broadly categorized into two types: system software and application software. System software includes operating systems, device drivers, and utility programs that manage and support a computer's basic functions. Application software refers to programs that perform specific tasks for users, such as word processors, spreadsheets, and database management systems.</ans><br>
+        <ans>Software can be broadly categorized into two types: system software and application software. <br>System software includes operating systems, device drivers, and utility programs that manage and support a computer's basic functions. <br>Application software refers to programs that perform specific tasks for users, such as word processors, spreadsheets, and database management systems.</ans><br>
         
         <que>3. Define software engineering.</que><br>
         <ans>Software engineering is the systematic application of engineering approaches to the development of software. It involves the use of methodologies, tools, and techniques to design, develop, maintain, test, and evaluate software systems to ensure they are reliable, efficient, and meet user requirements.</ans><br>
