--- a/semister1/chemistry.html
+++ b/semister1/chemistry.html
@@ -71,7 +71,9 @@
           <li class="nav-item">
             <a class="nav-link" href="../semister7/index.html">4th Year</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link" href="../NPTEL/index.html">NPTEL</a>
+          </li>
         </ul>
       </div>
     </div>
