--- a/semister5/formal_ass.html
+++ b/semister5/formal_ass.html
@@ -135,7 +135,7 @@
 </strong>
             <br>
 
-<table>
+<table style="width: 80vw;">
     <thead>
         <tr>
             <th>Aspect</th>
@@ -174,7 +174,7 @@
 <img id="img1" src="../assets/images/formal/q4.png">
 <br><br>
 
-
+<img id="img1" src="../assets/images/formal/q4_ans.jpg">
 <br>
 <strong>5) Describe DFA and NFA with the help of its Tuples.
 </strong>
