--- a/semister5/formal_ass.html
+++ b/semister5/formal_ass.html
@@ -216,8 +216,14 @@
         <li><strong>F:</strong> The set of accept states (final states). <br> Example: F = {q<sub>2</sub>}</li>
     </ul>
 </div>
-
-
+<strong>
+    6) Minimize the DFA
+</strong>
+<br>
+<img src="../assets/images/formal/q5.png" alt="" id="img1">
+<br>
+<img src="../assets/images/formal/q5_ans1.jpg" alt="" id="img1">
+<img src="../assets/images/formal/q5_ans2.jpg" alt="" id="img1">
       </section>
       <div id="watermark">@Debuggers</div>
 
