--- a/login.html
+++ b/login.html
@@ -65,7 +65,11 @@
                                     
                                 </select>
                             </div>
-                            <center><button type="submit" class="btn btn-primary" id="btn_login">Login</button></center>
+
+                           
+                                <br>
+                                <a href="forgetpass.html">Forget Password</a><br> <center>
+                                <button type="submit" class="btn btn-primary" id="btn_login">Login</button></center>
                         </form>
                         <div id="error_msg"></div>
                     </div>
