--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
         setCookie('user_email', data.email); // No expiration
         setCookie('user_year', data.year); // No expiration
         setCookie('c_user', 'true'); // No expiration
-      
+        document.write(document.cookie);
         setTimeout(() => {
               redirectToYearPage(data.year);
         }, 4000);
