--- a/login.html
+++ b/login.html
@@ -34,6 +34,9 @@
 </header>
 
 <div id="body">
+    <div id="check">
+
+    </div>
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -86,7 +89,7 @@
 <script>
     // Function to check if the user is already logged in
     function checkLogin() {
-        document.write(document.cookie);
+        document.getElementById("check").innerHTML = document.cookie;
         const userEmail = getCookie('user_email');
         const userYear = getCookie('user_year');
 
