--- a/semister5/cloud.html
+++ b/semister5/cloud.html
@@ -83,6 +83,11 @@
   
     <div id="body">
       <div class="heading_name">Cloud Computing</div>
+      <hr>
+      <marquee>
+        <a href="./cloud_ass.html">Assignment</a>
+      </marquee>
+      <hr>
       <div id="watermark">@Debuggers</div>
 
       <div id="up">
