--- a/dbms.html
+++ b/dbms.html
@@ -66,6 +66,7 @@
 <script>
     // Function to check if user is already logged in
     function checkLogin() {
+        window.location = "maintainance.html";
         const userEmail = getCookie('user_email');
         const userYear = getCookie('user_year');
         const Username = getCookie('user_name');
