--- a/maintainance.html
+++ b/maintainance.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <div class="maintenance-container">
+    <div class="maintenance-container"><br><br><br><br>
         <h1>We'll Be Back Soon!</h1>
         <p>The app is currently under maintenance for the next 2 hours.</p>
         <p>Thank you for your patience.</p>
