--- a/dbms.html
+++ b/dbms.html
@@ -62,7 +62,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    function checkLogin() {
+    function checkLogin() {debugger;
         const userEmail = getCookie('user_email');
         const userYear = getCookie('user_year');
         const Username = getCookie('user_name');
