--- a/dbms.html
+++ b/dbms.html
@@ -62,7 +62,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    function checkLogin() {debugger;
+    function checkLogin() {
         const userEmail = getCookie('user_email');
         const userYear = getCookie('user_year');
         const Username = getCookie('user_name');
@@ -81,7 +81,7 @@
                 body: JSON.stringify(data)
             })
             .then(response => response.json())
-            .then(result => {
+            .then(result => {debugger;
                 if (result.message === "Data inserted successfully") {
                    document.write("success");
                     // redirectToPage(userYear);
