--- a/nouser.html
+++ b/nouser.html
@@ -2,9 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <title>Helpdesk</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Custom JavaScript -->
+    <script src="assets/js/script.js"></script>
+    <!-- MD5 Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
+    <style>
+        #error_msg{
+            color: red;
+        }
+        .message-container {
+            max-width: 600px;
+            margin: 50px auto;
+            margin-right: 10px;
+            padding: 20px;
+            text-align: center;
+            border: 1px solid #e74c3c;
+            border-radius: 8px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .message-container h1 {
+            color: #e74c3c;
+            font-size: 2em;
+        }
+        .message-container p {
+            color: #333;
+            font-size: 1.2em;
+        }
+        .contact-link {
+            margin-top: 20px;
+            font-size: 1em;
+            color: #3498db;
+            text-decoration: none;
+        }
+        .contact-link:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
-<body bgcolor="black">
+<body >
+<header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
+    <div class="container-fluid">
+        <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="assets/images/logo.png" id="imglogo">
+            <span class="fs-4 mr-5 lo"><h2 class="bold-text">Helpdesk</h2></span>
+        </a>
+    </div>
+</header>
+
+<div id="body">
+    <div class="message-container">
+        <h1>You Are Blocked</h1>
+        <p>You have been blocked from accessing this app. Please contact the admins for further assistance.</p>
+        <a class="contact-link" href="mailto:admin@yourapp.com">Contact Admins</a>
+    </div>
+</div>
+
+<!-- Bootstrap JS and dependencies (Popper.js and Bootstrap bundle) -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
